<resources>
    <string name="app_name">IELTS Yourself</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="simple_topic_title">Fun and learning</string>
    <string name="simple_topic_subtitle">Intermediate</string>
    <string name="simple_word_title">Book</string>
    <string name="simple_word_subtitle">An item to read things</string>
    <string name="action_search">Search</string>
    <string name="save">Save</string>
    <string name="listen">Listen</string>
    <string name="translate">Translate</string>
    <string name="sample_word_meaning">This word means something meaningful and clear</string>
    <string name="sample_word_example">Example: Lorem ipsum lorem ipsum lorem ipsum.</string>
    <string name="find_meaning">What does this word mean: <b>%s</b></string>
    <string name="sample_game_option">Option A</string>
    <string name="title_translate_dialog">Translation</string>
    <string name="close">Close</string>
    <string name="sample_text_translate">Qosiq</string>
    <string name="title_game_dialog">Games</string>
    <string name="reading">Reading</string>
    <string name="writing">Writing</string>
    <string name="listening">Listening</string>
    <string name="title_new_topic">New topic</string>
    <string name="hint_topic">Topic name</string>
    <string name="title_new_word">New word</string>
    <string name="hint_word">Word name</string>
    <string name="hint_word_meaning">Word meaning</string>
    <string name="more_fields">More fields</string>
    <string name="add">Add</string>
    <string name="hint_topic_description">Description (optional)</string>
    <string name="create_a_new_topic">Create a new topic</string>
    <string name="subtitle_new_topic">Click here to create a new topic</string>
    <string name="add_new_word">Add new word</string>
    <string name="hint_word_translation">Translation</string>
    <string name="hint_new_word_example">Example</string>
    <string name="go_on">Continue</string>
    <string name="text_button_continue">Continue</string>
    <string name="notifications">Notifications</string>
    <string name="game_settings">Game settings</string>
    <string name="language">Languages</string>
    <string name="settings">Settings</string>
    <string name="progress">Progress</string>
    <string name="you">You</string>
    <string name="saved_words">Saved words</string>
    <string name="topics">Topics</string>
    <string name="about">About</string>
    <string name="developer">Developer</string>
    <string name="me">Me</string>
    <string name="updates">Tips and updates</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="my_topics">My topics</string>
    <string name="words">Words</string>
    <string name="submit">Submit</string>
    <string name="word">Word</string>
    <string name="start">Start</string>
    <string name="account">Account</string>
    <string name="hint_sign_in_email">you@gmail.com</string>
    <string name="hint_sign_in_password">Password</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="text_no_account">No account? Click to create a new account</string>
    <string name="simple_word_size">12 words</string>
    <string name="til_error_empty">This field can not be empty!</string>
    <string name="subtitle_topic"> %d words</string>
    <string name="learn">Start learning</string>
    <string name="practise">Practise</string>
    <string name="all_topics">All topics</string>
    <string name="choose_a_topic_to_practise">Choose a topic</string>
    <string name="replay">Replay</string>
    <string name="bio_developer">Hello, \n\n I am Berdakh, I build this app for people who are learning foreign languages around the world. \n\n Although default topics are mainly focused to learn English and prepare for IELTS exam, you can create your own topics to learn any other language(s) as well.\n\nBerdakh Tlepov\nAndroid Developer</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_topic">Do you want to delete <b>%s</b> topic with %d words inside it?</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="test">sole</string>
    <string name="start_game_dialog_choose">Are you ready to practise <b>%s</b> topic?</string>
    <string name="start_game_dialog_error">Topic has not enough words to practise. The minimum amount for each topic is 10 words.</string>
    <string name="clear">OK</string>
    <string name="subtitle_practise">Question %d / %d </string>


</resources>