<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.me.MeFragment">


    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/me"
        app:titleCentered="true"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8"
        android:text="@string/you"
        android:textColor="?colorPrimary" />

    <TextView
        android:id="@+id/tv_me_account"
        style="@style/SettingsTextView"
        android:text="@string/account"
        app:drawableStartCompat="@drawable/baseline_account_circle_24" />

    <TextView
        android:id="@+id/tv_me_topics"
        style="@style/SettingsTextView"
        android:text="@string/topics"
        app:drawableStartCompat="@drawable/round_topic_24" />

    <TextView
        android:id="@+id/tv_me_saved_words"
        style="@style/SettingsTextView"
        android:text="@string/saved_words"
        app:drawableStartCompat="@drawable/round_star_24" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_8" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8"
        android:text="@string/settings"
        android:textColor="?colorPrimary" />


    <TextView
        style="@style/SettingsTextView"
        android:text="@string/game_settings"
        app:drawableStartCompat="@drawable/round_settings_24" />

    <TextView
        style="@style/SettingsTextView"
        android:text="@string/language"
        app:drawableStartCompat="@drawable/round_language_24" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_8" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8"
        android:text="@string/about"
        android:textColor="?colorPrimary" />

    <TextView
        style="@style/SettingsTextView"
        android:text="@string/developer"
        app:drawableStartCompat="@drawable/round_logo_dev_24" />


</LinearLayout>