<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:textColor="?colorOnSurface"
        android:padding="8dp"
        android:text="@string/simple_word_title"
        android:textSize="34sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:chipIconTint="?colorOnSurface"
            app:chipIcon="@drawable/outline_star_outline_24" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listen"
            app:chipIconTint="?colorOnSurface"
            app:chipIcon="@drawable/baseline_volume_up_24" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate"
            app:chipIconTint="?colorOnSurface"
            app:chipIcon="@drawable/round_translate_24"
            app:iconStartPadding="4dp" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="?colorOnSurface"
        android:padding="8dp"
        android:text="@string/sample_word_meaning" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:fontFamily="serif"
        android:text="@string/sample_word_example"/>
</LinearLayout>