<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.practise.PractiseFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_practise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:subtitle="@string/subtitle_practise"
        app:subtitleCentered="true"
        app:title="@string/practise"
        app:titleCentered="true" />


    <TextView
        android:id="@+id/tv_task_practise"
        android:layout_marginTop="@dimen/dimen_32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_8"
        android:layout_margin="@dimen/dimen_8"
        android:text="@string/find_meaning"
        android:textColor="?colorOnSurface" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8">

        <RadioButton
            android:id="@+id/rb_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_game_option" />

        <RadioButton
            android:id="@+id/rb_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_game_option" />

        <RadioButton
            android:id="@+id/rb_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_game_option" />

        <RadioButton
            android:id="@+id/rb_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_game_option" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit_practise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_margin="@dimen/dimen_8"
        android:text="@string/submit"
        app:cornerRadius="@dimen/dimen_16" />

</LinearLayout>