<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ui.word_edit.WordEditFragment">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_edit_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/edit"
        app:navigationIcon="@drawable/round_close_24"
        app:titleCentered="true"
        app:menu="@menu/menu_top_edit_word"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_word_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_word"
        android:layout_margin="@dimen/dimen_8"
        android:padding="@dimen/dimen_8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_word_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_word_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8"
        android:hint="@string/hint_word_meaning"
        android:padding="@dimen/dimen_8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_word_meaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_word_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_word_translation"
        android:layout_margin="@dimen/dimen_8"
        android:padding="@dimen/dimen_8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_word_translation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_word_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8"
        android:hint="@string/hint_new_word_example"
        android:padding="@dimen/dimen_8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_word_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_edit_word_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8"
        android:padding="@dimen/dimen_8"
        android:text="@string/delete"
        android:textColor="?colorError"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/dimen_4"
        app:drawableStartCompat="@drawable/round_delete_24"
        app:drawableTint="?colorError" />



</LinearLayout>