<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".ui.new_word.NewWordFragment">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_new_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/title_new_word"
        app:navigationIcon="@drawable/round_close_24"
        app:titleCentered="true"
        app:menu="@menu/menu_top_new_word"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_word_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_word"
        android:layout_margin="@dimen/dimen_8"
        android:padding="@dimen/dimen_8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_word_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_word_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8"
        android:hint="@string/hint_word_meaning"
        android:padding="@dimen/dimen_8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_word_meaning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_new_word_more_fields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8"
        android:padding="@dimen/dimen_8"
        android:text="@string/more_fields"
        android:textColor="?colorPrimary"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:drawablePadding="@dimen/dimen_4"
        app:drawableEndCompat="@drawable/round_keyboard_arrow_right_24"
        app:drawableTint="?colorPrimary" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_word_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_word_translation"
        android:layout_margin="@dimen/dimen_8"
        android:padding="@dimen/dimen_8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_word_translation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_new_word_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8"
        android:hint="@string/hint_new_word_example"
        android:padding="@dimen/dimen_8"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_new_word_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>





</LinearLayout>