<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dimen_32"
    tools:context=".ui.topic_edit.TopicEditFragment">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_edit_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/edit"
        app:titleCentered="true"
        app:navigationIcon="@drawable/round_close_24"
        app:menu="@menu/menu_top_edit_topic"/>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_edit_topic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="@dimen/dimen_14"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/dimen_32"
        android:scaleType="centerCrop"
        android:src="@drawable/round_topic_24"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_topic_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:hint="@string/hint_topic">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_topic_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_topic_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen_8"
        android:layout_marginHorizontal="@dimen/dimen_16"
        android:hint="@string/hint_topic_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_topic_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_topic_edit_delete"
        style="@style/Widget.Material3.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textSize="@dimen/text_14"
        android:layout_marginTop="@dimen/dimen_32"
        android:layout_marginHorizontal="@dimen/dimen_8"
        android:padding="@dimen/dimen_8"
        android:text="@string/delete"
        android:textColor="?colorError"
        android:drawablePadding="@dimen/dimen_4"
        app:iconGravity="textStart"
        app:icon="@drawable/round_delete_24"
        app:iconTint="?colorError" />


</LinearLayout>
