<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/dimen_32"
    android:padding="@dimen/dimen_16"
    app:cardCornerRadius="@dimen/dimen_32"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16">


       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/title_game_dialog"
           android:padding="@dimen/dimen_8"
           android:textSize="@dimen/text_24"
           android:textColor="?colorOnSurface"
           android:textAlignment="center" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_reading"
                android:text="@string/reading"
                android:textSize="@dimen/text_14"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginVertical="@dimen/dimen_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/round_menu_book_24"
                android:hapticFeedbackEnabled="true"
                app:elevation="0dp"
                app:strokeColor="@android:color/secondary_text_dark"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_writing"
                android:text="@string/writing"
                android:textSize="@dimen/text_14"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_marginVertical="@dimen/dimen_4"
                android:layout_width="match_parent"
                android:hapticFeedbackEnabled="true"
                android:layout_height="wrap_content"
                app:icon="@drawable/round_create_24"
                app:elevation="0dp"
                app:strokeColor="@android:color/secondary_text_dark"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_listening"
                android:text="@string/listening"
                android:textSize="@dimen/text_14"
                android:layout_marginVertical="@dimen/dimen_4"
                android:hapticFeedbackEnabled="true"
                android:layout_marginHorizontal="@dimen/dimen_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/round_headphones_24"
                app:elevation="0dp"
                app:strokeColor="@android:color/secondary_text_dark"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"/>
        </RadioGroup>


        <com.google.android.material.button.MaterialButton

            app:cornerRadius="@dimen/dimen_16"
            android:text="Start"
            app:iconGravity="textEnd"
              android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"/>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>